# SpaceCat

./: LICENSE  README.md  environment.yml  pyproject.toml
data/: fiber_stats_per_tile.csv  fiber_stats_table.csv  metadata.csv  mixing_scores.csv  neighborhood_compartment_proportions.csv  neighborhood_image_proportions.csv
data/compartment_masks/: TONIC_TMA16_R6C5.tiff  TONIC_TMA16_R8C3.tiff  compartment_mapping.csv
data/compartment_masks/TONIC_TMA16_R6C5/: stroma_border.tiff
data/compartment_masks/TONIC_TMA16_R8C3/: cancer_border.tiff  cancer_core.tiff  stroma_border.tiff  stroma_core.tiff
data/deepcell_output/: TONIC_TMA13_R1C5_whole_cell.tiff  TONIC_TMA16_R6C5_whole_cell.tiff  TONIC_TMA16_R6C6_whole_cell.tiff  TONIC_TMA16_R8C3_whole_cell.tiff  TONIC_TMA22_R10C6_whole_cell.tiff  TONIC_TMA22_R11C3_whole_cell.tiff  TONIC_TMA4_R10C1_whole_cell.tiff  TONIC_TMA4_R10C4_whole_cell.tiff  TONIC_TMA4_R10C5_whole_cell.tiff  TONIC_TMA4_R10C6_whole_cell.tiff  TONIC_TMA4_R9C6_whole_cell.tiff
src/SpaceCat/: example_SpaceCat.ipynb  features.py  preprocess.py
